# KernelVerification

./: .env.example  .gitignore  README-original.md  README.md  agentic_optimization_plan.md  agentic_roadmap.md  precision_verification.md  pyproject.toml  pyrightconfig.json  roadmap.md
KernelAgent/triton_kernel_agent/: agent.py  manager.py
agents/: __init__.py  author.py  judge.py  parsing.py  skeptic.py  types.py  verifier.py
dataset/_advprec_magicpig_attn/: meta.json  problem.txt
dataset/_advprec_matmul_bug/: meta.json  problem.txt
dataset/_advprec_matmul_correct/: meta.json  problem.txt
dataset/_advprec_matmul_fp8/: meta.json  problem.txt
dataset/_advprec_softmax_correct/: meta.json  problem.txt
dataset/_advprec_softmax_countcap/: meta.json  problem.txt
dataset/_advprec_softmax_fp8_correct/: meta.json  problem.txt
dataset/_advprec_softmax_fp8_tail/: meta.json  problem.txt
dataset/_advprec_softmax_tail/: meta.json  problem.txt
dataset/_advprec_topk_boundary/: debate_result.json  meta.json  problem.txt  recheck_output.txt  recheck_test.py
dataset/_advprec_topk_correct/: meta.json  problem.txt
dataset/_advprec_topk_subsample/: meta.json  problem.txt
dataset/elem_add/: debate_history.json  debate_result.json  meta.json  (+4 more)
tests/: advprec_fp8_demo.py  advprec_magicpig_demo.py  advprec_pipeline_test.py  advprec_softmax_demo.py  advprec_topk_demo.py  inspect_generator.py  migrate_dataset.py  test_advprec_regression.py  test_agentic_cli_batch.py  test_agentic_execution.py  test_agentic_ledger.py  test_agentic_llm_agent.py  test_agentic_orchestrator.py  test_agentic_persistence.py  test_agentic_protocol.py  test_agentic_registry.py
verifier/: __init__.py  agentic_run.py  build_dataset.py  classify.py  compare.py  dataset.py  debate.py  generator.py  gpu_pick.py  llm_client.py  precision_recheck.py  recheck.py  run.py  verdict.py
(+98 files in other folders)
