[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-verification"
version = "0.1.0"
description = "Agentic verification for LLM-generated Triton kernels"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "kernelagent",
    "torch>=2.7.0",
    "triton>=3.2.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kv-build = "verifier.build_dataset:main"
kv-agentic-run = "verifier.agentic_run:main"

[tool.setuptools.packages.find]
include = ["verifier*"]

[tool.uv.sources]
kernelagent = { path = "./KernelAgent", editable = true }
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
